--- a/Pandulzura_AccesoDatos/Pandulzura_AccesoDatos.csproj
+++ b/Pandulzura_AccesoDatos/Pandulzura_AccesoDatos.csproj
@@ -44,11 +44,13 @@
     <Compile Include="ConexionBD.cs" />
     <Compile Include="DAO\CategoriaDAO.cs" />
     <Compile Include="DAO\DetallePedidoDAO.cs" />
+    <Compile Include="DAO\PedidosDAO.cs" />
     <Compile Include="DAO\ProductoDAO.cs" />
     <Compile Include="DAO\RolDAO.cs" />
     <Compile Include="DAO\UsuarioDAO.cs" />
     <Compile Include="Entidades\Categoria.cs" />
     <Compile Include="Entidades\DetallePedido.cs" />
+    <Compile Include="Entidades\Pedidos.cs" />
     <Compile Include="Entidades\Producto.cs" />
     <Compile Include="Entidades\Rol.cs" />
     <Compile Include="Entidades\Usuario.cs" />
