Removing user generated files - Removing used generated files from obj folder - Updating .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Pandulzura_AccesoDatos/bin/Debug/
 /Pandulzura_WinPresentacion/bin/Debug/
 /Pandulzura_LogicaNegocio/bin/Debug/
+/**/bin/
+/**/obj/
