--- a/Pandulzura_WinPresentacion/Pandulzura_WinPresentacion.csproj
+++ b/Pandulzura_WinPresentacion/Pandulzura_WinPresentacion.csproj
@@ -171,5 +171,8 @@
   <ItemGroup>
     <None Include="Resources\categoria.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\factura.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
